networking/dev-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-external
  namespace: juntos
spec:
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: dev-external
  namespace: juntos
subsets:
  - addresses:
      - ip: 10.0.0.15
    ports:
      - port: 3000
