networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juntos-ingress
  namespace: juntos
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - recipes.juntos.casa
        - todos.juntos.casa
        - assistant.juntos.casa
        - finances.juntos.casa
        - shithead.juntos.casa
      secretName: juntos-tls
  rules:
    - host: recipes.juntos.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recipes
                port:
                  number: 80
    - host: todos.juntos.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: placeholder
                port:
                  number: 80
    - host: assistant.juntos.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 80
    - host: finances.juntos.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: placeholder
                port:
                  number: 80
    - host: shithead.juntos.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: placeholder
                port:
                  number: 80
    - host: dev.juntos.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-external
                port:
                  number: 80
